# bcsv-jmap-rs

./: Cargo.toml  LICENSE  README.md  pyproject.toml  test_output.bcsv  test_output.csv
assets/examples/: scenariodata.bcsv  scenariodata.csv
examples/: read_bcsv.rs  write_bcsv.rs
src/: csv.rs  entry.rs  error.rs  field.rs  hash.rs  io.rs  jmap.rs  lib.rs  python.rs
