[package]
name = "lib-bcsv-jmap"
version = "0.1.0"
edition = "2024"
authors = ["Demorck"]
description = "A Rust library for reading and writing BCSV/JMap format used for Wii and GC games, including Super Mario Galaxy."
license = "MIT"
repository = "https://github.com/Demorck/bcsv-jmap-rs"
keywords = ["bcsv", "jmap", "super-mario-galaxy"]

[dependencies]
byteorder = "1.5.0"
encoding_rs = "0.8.35"
thiserror = "2.0.18"
csv = "1.4.0"
indexmap = "2.13.0"