[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "lib_bcsv_jmap"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "A Rust library for reading and writing BCSV/JMap format used for Wii and GC games, including Super Mario Galaxy."
authors = [
    {name = "Demorck"}
]
license = {file = "LICENSE"}
readme = "README.md"

[tool.maturin]
features = ["python"]
